@@ -156,6 +156,7 @@ dependencies {
     implementation fg.deobf("curse.maven:botany-trees-411357:4719845")
     implementation fg.deobf("curse.maven:botany-pots-353928:4793076")
     implementation fg.deobf("curse.maven:serene-seasons-291874:4761603")
+    implementation fg.deobf("curse.maven:thirst-was-taken-679270:5071555")
 
     compileOnly fg.deobf("curse.maven:biomes-o-plenty-220318:4764804")
     compileOnly fg.deobf("curse.maven:terralith-513688:4938254")
