@@ -10,33 +10,51 @@
       ],
       "entries": [
         {
-          "type": "minecraft:item",
-          "conditions": [
+          "type": "minecraft:alternatives",
+          "children": [
             {
-              "condition": "minecraft:inverted",
-              "term": {
-                "block": "fruitsdelight:durian_leaves",
-                "condition": "minecraft:block_state_property",
-                "properties": {
-                  "leaf": "bare"
-                }
-              }
-            },
-            {
-              "condition": "minecraft:match_tool",
-              "predicate": {
-                "enchantments": [
-                  {
-                    "enchantment": "minecraft:silk_touch",
-                    "levels": {
-                      "min": 1
+              "type": "minecraft:item",
+              "conditions": [
+                {
+                  "condition": "minecraft:inverted",
+                  "term": {
+                    "block": "fruitsdelight:durian_leaves",
+                    "condition": "minecraft:block_state_property",
+                    "properties": {
+                      "leaf": "bare"
                     }
                   }
-                ]
-              }
+                },
+                {
+                  "condition": "minecraft:match_tool",
+                  "predicate": {
+                    "enchantments": [
+                      {
+                        "enchantment": "minecraft:silk_touch",
+                        "levels": {
+                          "min": 1
+                        }
+                      }
+                    ]
+                  }
+                }
+              ],
+              "name": "fruitsdelight:durian_leaves"
+            },
+            {
+              "type": "minecraft:item",
+              "conditions": [
+                {
+                  "block": "fruitsdelight:durian_leaves",
+                  "condition": "minecraft:block_state_property",
+                  "properties": {
+                    "fruit": "fruits"
+                  }
+                }
+              ],
+              "name": "fruitsdelight:durian"
             }
-          ],
-          "name": "fruitsdelight:durian_leaves"
+          ]
         }
       ],
       "rolls": 1.0
