@@ -1,4 +1,5 @@
 Sapling Pot
+Thirst compat
 small Durian
 
 1.0.6 / 0.5.6
